--- a/css/scss/components/_geral.scss
+++ b/css/scss/components/_geral.scss
@@ -1,7 +1,11 @@
+
 body{
     background: linear-gradient(to right, #1a1a1a 30%, #fff 30%);
     font-family: $fontPrimary;
 }
 #app{
     padding:0px 80px;
+    @include device(l){
+        padding:0 10px;
+    }
 }
