--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,5 +1,6 @@
 @import './components/reset.scss';
 @import './components/variaveis_mixins.scss';
+@import './components/responsive.scss';
 @import './components/geral.scss';
 @import './components/header.scss';
 @import './components/produtos.scss';
