--- a/css/scss/components/_carrinho_modal.scss
+++ b/css/scss/components/_carrinho_modal.scss
@@ -7,6 +7,9 @@
     width: 100%;
     padding: 20px;
     display: none;
+    @include devide(l){
+        padding:10px;
+    }
     &::before{
         content:'';
         position: fixed;
