--- a/css/scss/components/_modal.scss
+++ b/css/scss/components/_modal.scss
@@ -7,6 +7,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include device(l){
+        padding:10px;
+    }
     &::before{
         content:"";
         position: fixed;
@@ -25,17 +28,31 @@
         padding: 50px 50px 50px 0;
         background: linear-gradient(to right, transparent 250px, #fff 250px);
         animation: fadeIn .5s forwards;
+        @include device(l){
+            grid-gap:20px;
+            background: #fff;
+            padding:10px 0;
+        }
         .modal_img{
             grid-column: 1;
             @include box-shadow(0px 3px 4px rgba(0,0,0,0.6), 0px 4px 15px rgba(0,0,0,0.8));
+            @include device(l){
+                grid-row: 2;
+            }
             img{
                 max-width: 300px;
                 display: block;
+                @include device(l){
+                    max-width: 100%;
+                }
             }
         }
         .modal_dados{
             max-width: 600px;
             grid-column: 2;
+            @include device(l){
+                grid-column: 1;
+            }
             .modal_fechar{
                 border-radius:50%;
                 border:2px solid #000;
@@ -60,6 +77,9 @@
                 font-size:1rem;
                 padding:10px 25px;
                 font-family: $fontPrimary;
+                @include device(l){
+                    margin-top:20px;
+                }
                 &:active{
                     background: #808080;
                 }
@@ -70,6 +90,10 @@
         }
         .avaliacoes{
             grid-column:2;
+            @include device(l){
+                grid-column: 1;
+                padding:10px;
+            }
             .avaliacoes_subtitulo{
                 font-size: 1.75rem;
             }
